# Cookbook

./: .gcloudignore  .gitignore  Dockerfile  README.md  agents-cli-manifest.yaml  deployment_metadata.json  installation_guide.md  pyproject.toml
.agents/skills/recipe-recommend/: SKILL.md
.agents/skills/save-receipt/: SKILL.md
.agents/skills/save-recipe-bulk/: SKILL.md
.agents/skills/tutorial/: SKILL.md
app/: agent.py
app/app_utils/: telemetry.py  typing.py
cookbook_frontend/: Dockerfile  README.md  index.html  main.py  pyproject.toml  requirements.txt
deployment/terraform/single-project/: variables.tf
deployment/terraform/single-project/vars/: env.tfvars
tests/unit/: test_save_routing.py
