[project]
name = "cookbook_frontend"
version = "0.1.0"
description = "FastAPI Frontend Dashboard for Cookbook Agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform>=1.156.0",
    "python-dotenv>=1.0.0",
    "gspread>=6.0.0",
]

[tool.uv]
package = false
